// Copyright (C) 2021-2024 Lightbend Inc. <https://www.lightbend.com>

syntax = "proto3";

import "google/protobuf/empty.proto";
import "kalix/annotations.proto";

package com.example.replicated.counter;

option java_outer_classname = "SomeCounterApi";

message IncreaseValue {
  string counter_id = 1 [(kalix.field).id = true];
  int32 value = 2;
}

message DecreaseValue {
  string counter_id = 1 [(kalix.field).id = true];
  int32 value = 2;
}

message GetValue {
  string counter_id = 1 [(kalix.field).id = true];
}

message CurrentValue {
  int32 value = 1;
}

service CounterService {
  option (kalix.codegen) = {
    replicated_entity: {
      name: ".domain.SomeCounter"
      type_id: "some-counter"
      replicated_counter: {}
    }
  };

  rpc Increase(IncreaseValue) returns (google.protobuf.Empty);
  rpc Decrease(DecreaseValue) returns (google.protobuf.Empty);
  rpc Get(GetValue) returns (CurrentValue);
}
